Oleg Bulanov: final version of client was added.

--- a/hw3/www/index.html
+++ b/hw3/www/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="jquery-ui.js"></script>
     <script type="text/javascript" src="game_script.js"></script>
     <link type="text/css" rel="stylesheet" href="game_style.css">
+    <link type="text/css" rel="stylesheet" href="jquery-ui.css">
 </head>
 <body>
 <div id="field"></div>
@@ -21,9 +22,9 @@
     <label>Список игроков:</label>
     <div id="who-plays"></div>
 </div>
-
+<div id="game-over-dialog"></div>
 </body>
 
-<div id="game-over-dialog"></div>
+
 
 </html>
